--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 $terminal = kitty
 $fileManager = nemo
 $menu = wofi --show drun --cache-file ~/.cache/wofi-cache
+$browser = brave
 
 
 #################
@@ -57,9 +58,7 @@ exec-once = dunst
 exec-once = /usr/bin/kdeconnectd
 exec-once = kdeconnect-indicator
 exec-once = hypridle
-exec-once = redshift -c ~/.config/redshift/redshift.conf &
-exec-once = wl-paste --type text --watch cliphist store &
-exec-once = wl-paste --type image --watch cliphist store &
+exec-once = redshift -c ~/.config/redshift/redshift.conf
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -353,3 +352,7 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# feh image in floating window
+windowrule = float,class:^feh$
+
