--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,77 +1,39 @@
 background {
     path = /home/drax/Downloads/wallpaper.jpg
-    blur = true
-    blur_size = 24
-    blur_passes = 6
-}
-
-// Gradient overlay for depth
-overlay {
-    color = rgba(20,20,30,0.25)
-    gradient = vertical
-    gradient_color_top = rgba(30,30,40,0.35)
-    gradient_color_bottom = rgba(0,0,0,0.55)
-}
-
-// User avatar and greeting
-label {
-    text = "Welcome, drax!"
-    font_family = "JetBrainsMono Nerd Font"
-    font_size = 28
-    color = rgba(255,255,255,0.98)
-    shadow_passes = 2
-    shadow_offset = 0,4
-    shadow_color = rgba(0,0,0,0.45)
-    position = 0, -180
-    halign = center
-    valign = center
-}
-
-avatar {
-    image = /home/drax/.face
-    size = 90
-    border_size = 4
-    border_color = rgba(180,180,255,0.7)
-    rounding = 999 # fully circular
-    position = 0, -120
-    halign = center
-    valign = center
-    shadow_passes = 2
-    shadow_offset = 0,4
-    shadow_color = rgba(0,0,0,0.35)
+    blur_passes = 3
+    blur_size = 6
 }
 
 input-field {
-    size = 340, 54
-    position = 0, 0
-    placeholder_text = Password...
-    font_family = "JetBrainsMono Nerd Font"
-    font_size = 18
-    color = rgba(255,255,255,0.98)
-    outline_thickness = 2
-    outline_color = rgba(180,180,255,0.25)
-    inner_color = rgba(40,40,60,0.65)
-    rounding = 22
+    size = 250, 25
+    outline_thickness = 0
+    dots_size = 0.3
+    dots_space = 0.5
+    dots_center = true
+    inner_color = rgb(FFFFFF)
+    font_color = rgb(10, 10, 10)
+    hide_input = false
+    rounding = -1
+    check_color = rgb(255, 97, 97)
+    fail_color = rgb(255, 97, 97)
+    fail_transition = 300
+    position = 0, -20
     halign = center
     valign = center
-    shadow_passes = 2
-    shadow_offset = 0,4
-    shadow_color = rgba(0,0,0,0.25)
+    font_size = 30
+    font_family = JetBrainsMono Nerd Font
+    placeholder_text = what is wrong? you dont know the password 🤨
+
 }
 
-// Clock widget
-
-# TIME
 label {
-  monitor = 
-  text = cmd[update:1000] echo "$(date +"%-I:%M %p")"
-  color = rgba(137,180,250,0.95) # Neon blue
-  font_size = 100
-  font_family = JetBrains Mono Extrabold
-  position = 0, 200
-  halign = center
-  valign = center
-  shadow_passes = 3
-  shadow_offset = 0,8
-  shadow_color = rgba(30,60,180,0.45)
+    text = cmd[update:1000] date +"%I:%M %p"
+    color = rgb(FFFFFF)
+    font_size = 100
+    font_family = JetBrainsMono Nerd Font
+    position = 0, 150
+    halign = center
+    valign = center
+    shadow_passes = 5
+    shadow_size = 10
 }
