Update configuration files and scripts for improved functionality and organization
- Enhanced .gitignore to include additional directories and files.
- Modified hyprland.conf to streamline autostart processes and added workspace navigation shortcuts.
- Updated hyprlock.conf to use a dynamic wallpaper path and adjusted blur settings.
- Created new config.json and modules.json for hyprpanel to define custom modules and settings.
- Added style.css for swaync to define notification styles and behaviors.
- Implemented rofi-wifi.sh script for easier Wi-Fi management.
- Introduced xsettingsd.conf for GTK theme and cursor settings.
- Updated waybar configuration to include new modules and improved styling.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ crossnote
 dconf
 dolphinrc
 go
-gtk-3.0
 htop
 kdeconnect
 kde.org
@@ -22,3 +21,12 @@ rclone
 Google
 .android
 nextjs-nodejs
+libreoffice
+user-dirs.dirs
+user-dirs.locale
+gtk-2.0
+gtk-3.0
+gtk-4.0
+qt5ct
+qt6ct
+nwg-look
