--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,7 +1,8 @@
 background {
-    path = /home/drax/Downloads/wallpaper.jpg
-    blur_passes = 3
-    blur_size = 6
+    path = $HYPRLOCK_WALL
+    # path = /home/drax/Downloads/wallpaper.jpg
+    blur_passes = 2
+    blur_size = 3
 }
 
 input-field {
