--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,7 +32,6 @@ monitor=,1920x1080,auto,1
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -52,13 +51,15 @@ $browser = brave
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+# exec-once = waybar
+# exec-once = dunst
+# exec-once = swaync
+# exec-once = redshift -c ~/.config/redshift/redshift.conf
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,shh
-exec-once = waybar
-exec-once = dunst
+exec-once = hyprpanel
 exec-once = /usr/bin/kdeconnectd
 exec-once = kdeconnect-indicator
 exec-once = hypridle
-exec-once = redshift -c ~/.config/redshift/redshift.conf
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -73,6 +74,7 @@ exec-once = redshift -c ~/.config/redshift/redshift.conf
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = HYPRLOCK_WALL,$HOME/Drive/wallpaper/daylock.jpeg
 
 
 ###################
@@ -249,7 +251,11 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # lockscreen with hyperlock
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, /home/$USER/.config/scripts/hyprlock_wallpaper_day_night_switch.sh
+
+# Switch to adjacent workspaces with Ctrl + Alt + Left/Right arrow
+bind = CTRL ALT, left, workspace, -1
+bind = CTRL ALT, right, workspace, +1
 
 # screenshot
 bind = , Print, exec, grim ~/Pictures/Screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
@@ -257,9 +263,6 @@ bind = SHIFT, Print, exec, grim -g "$(slurp)" - | magick - -shave 1x1 PNG:- > ~/
 bind = CTRL, Print, exec, grim - | wl-copy
 bind = CTRL SHIFT, Print, exec, grim -g "$(slurp)" - | magick - -shave 1x1 PNG:- | wl-copy
 bind = $mainMod, Print, exec, grim -g "$(slurp)" - | swappy -f -
-
-# clipboard manager
-bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Resize windows with keyboard
 bind = $mainMod SHIFT, right, resizeactive, 30 0
@@ -352,7 +355,4 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-# feh image in floating window
-windowrule = float,class:^feh$
 
