--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,8 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # monitor=,preferred,auto,auto
-monitor=,1920x1080,auto,1
+monitor=HDMI-A-1,1920x1080,0x0,1 #external monitor above laptop screen
+monitor=eDP-1,1920x1080,0x1080,1 #laptop screen below external monitor
 
 
 ###################
@@ -57,9 +58,13 @@ $browser = brave
 # exec-once = redshift -c ~/.config/redshift/redshift.conf
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,shh
 exec-once = hyprpanel
+exec-once = swww-daemon
+exec-once = hyprsunset
 exec-once = /usr/bin/kdeconnectd
 exec-once = kdeconnect-indicator
 exec-once = hypridle
+exec-once = wl-paste --watch clipvault store # Stores text, image and any other binary data
+
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -103,7 +108,7 @@ env = HYPRLOCK_WALL,$HOME/Drive/wallpaper/daylock.jpeg
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 3
-    gaps_out = 8
+    gaps_out = 3
 
     border_size = 2
 
@@ -130,7 +135,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -138,7 +143,7 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 7
         passes = 3
 
@@ -204,6 +209,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    vfr = true
 }
 
 
@@ -250,6 +256,9 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# clipboard manager
+bind = SUPER, V, exec, clipvault list | rofi -dmenu -display-columns 2 | clipvault get | wl-copy
+
 # lockscreen with hyperlock
 bind = $mainMod, L, exec, /home/$USER/.config/scripts/hyprlock_wallpaper_day_night_switch.sh
 
@@ -271,15 +280,21 @@ bind = $mainMod SHIFT, up, resizeactive, 0 -30
 bind = $mainMod SHIFT, down, resizeactive, 0 30
 
 # Screen brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+bindr = , XF86MonBrightnessUp, exec, brightnessctl s +10%
+bindr = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bind = CTRL, XF86MonBrightnessUp, exec, brightnessctl s +5%
+bind = CTRL, XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
+# Manual temperature control (e.g., Super + H/J)
+# bind = $mainMod, H, exec, hyprctl hyprsunset temperature +250  # Warmer
+# bind = $mainMod, Y, exec, hyprctl hyprsunset temperature -250  # Cooler
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
