--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -298,6 +298,7 @@ bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = SUPER, equal, exec, rofi -show calc -modi calc -no-show-match -no-sort
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
