Refactor configuration files and scripts: enhance hypridle and hyprlock configurations, streamline hyprland key bindings, and improve setup script for clipboard management.

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,27 +1,41 @@
+# HyprIdle Configuration File
+
+# send awake notification
 general {
-    lock_cmd = hyprlock
-    before_sleep_cmd = hyprlock
+    lock_cmd = /home/$USER/.config/scripts/hyprlock_set_wallpaper.sh
+    before_sleep_cmd = /home/$USER/.config/scripts/hyprlock_set_wallpaper.sh
     after_sleep_cmd = notify-send "Awake!"
 }
 
+# idle listeners
+# dim after 4 minutes
 listener {
-    timeout = 300
-    on-timeout = hyprlock
-    on-resume = notify-send "Session unlocked"
+    timeout = 240
+    on-timeout = brightnessctl get > /tmp/brightness_level && brightnessctl set 10% 
+    on-resume = bash -c 'brightnessctl set $(cat /tmp/brightness_level || echo 60%)'
 }
 
+# lock after 5 minutes
+listener {
+    timeout = 300
+    on-timeout = /home/$USER/.config/scripts/hyprlock_set_wallpaper.sh
+}
+
+# turn off display after 10 minutes
 listener {
     timeout = 600
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
+# suspend after 30 minutes
 listener {
     timeout = 1800
     on-timeout = systemctl suspend
     on-resume = notify-send "System resumed"
 }
 
+# hibernate after 60 minutes
 listener {
     timeout = 3600
     on-timeout = systemctl hibernate
