--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -257,10 +257,10 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # clipboard manager
-bind = SUPER, V, exec, clipvault list | rofi -dmenu -display-columns 2 | clipvault get | wl-copy
+bind = $mainMod, V, exec, clipvault list | rofi -dmenu -display-columns 2 | clipvault get | wl-copy
 
 # lockscreen with hyperlock
-bind = $mainMod, L, exec, /home/$USER/.config/scripts/hyprlock_wallpaper_day_night_switch.sh
+bind = $mainMod, L, exec, /home/$USER/.config/scripts/hyprlock_set_wallpaper.sh
 
 # Switch to adjacent workspaces with Ctrl + Alt + Left/Right arrow
 bind = CTRL ALT, left, workspace, -1
@@ -285,7 +285,7 @@ bindr = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bind = CTRL, XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = CTRL, XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
-# Manual temperature control (e.g., Super + H/J)
+# Manual temperature control (e.g., $mainMod + H/J)
 # bind = $mainMod, H, exec, hyprctl hyprsunset temperature +250  # Warmer
 # bind = $mainMod, Y, exec, hyprctl hyprsunset temperature -250  # Cooler
 
@@ -298,7 +298,7 @@ bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = SUPER, equal, exec, rofi -show calc -modi calc -no-show-match -no-sort
+bind = $mainMod, equal, exec, rofi -show calc -modi calc -no-show-match -no-sort
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
