--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,6 +1,10 @@
+general{
+    fail_transition = 300
+}
+
 background {
     path = $HYPRLOCK_WALL
-    # path = /home/drax/Downloads/wallpaper.jpg
+    # path = /home/$USER/Downloads/wallpaper.jpg
     blur_passes = 2
     blur_size = 3
 }
@@ -9,7 +13,7 @@ input-field {
     size = 250, 25
     outline_thickness = 0
     dots_size = 0.3
-    dots_space = 0.5
+    dots_spacing = 0.5
     dots_center = true
     inner_color = rgb(FFFFFF)
     font_color = rgb(10, 10, 10)
@@ -17,11 +21,9 @@ input-field {
     rounding = -1
     check_color = rgb(255, 97, 97)
     fail_color = rgb(255, 97, 97)
-    fail_transition = 300
     position = 0, -20
     halign = center
     valign = center
-    font_size = 30
     font_family = JetBrainsMono Nerd Font
     placeholder_text = what is wrong? you dont know the password 🤨
 
@@ -37,4 +39,16 @@ label {
     valign = center
     shadow_passes = 5
     shadow_size = 10
+}
+
+label {
+    text = cmd[update:60000] sh -c "uptime -p | sed 's/^up //'"
+    color = rgb(FFFFFF)
+    font_size = 10
+    font_family = JetBrainsMono Nerd Font
+    position = 0, -510
+    halign = center
+    valign = center
+    shadow_passes = 2
+    shadow_size = 6
 }
