Enhance configuration files: add workspace movement shortcuts in hyprland, update qalc version and settings, modify readme for clarity, and adjust Rofi font settings.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -265,6 +265,8 @@ bind = $mainMod, L, exec, /home/$USER/.config/scripts/hyprlock_set_wallpaper.sh
 # Switch to adjacent workspaces with Ctrl + Alt + Left/Right arrow
 bind = CTRL ALT, left, workspace, -1
 bind = CTRL ALT, right, workspace, +1
+bind = CTRL ALT SHIFT, left, movetoworkspace, -1
+bind = CTRL ALT SHIFT, right, movetoworkspace, +1
 
 # screenshot
 bind = , Print, exec, grim ~/Pictures/Screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
@@ -296,6 +298,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, G, exec, rofi -modi emoji -show emoji
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, equal, exec, rofi -show calc -modi calc -no-show-match -no-sort
