--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -248,6 +248,12 @@ device {
 # rules below would make the specific app transparent
 # windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
 # windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
+windowrulev2 = float,title:^(Picture in picture)$
+windowrulev2 = pin,title:^(Picture in picture)$
+windowrulev2 = noborder,title:^(Picture in picture)$
+windowrulev2 = size 640 360,title:^(Picture in picture)$
+windowrulev2 = move 66.6% 66.5%,title:^(Picture in picture)$
+
 
 ###################
 ### KEYBINDINGS ###
@@ -334,8 +340,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
