Update configuration files: modify btop theme settings, add Ghostty config, adjust hyprland terminal, enhance readme and pkglist, and create starship configuration.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,10 +39,11 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nemo
 $menu = wofi --show drun --cache-file ~/.cache/wofi-cache
 $browser = brave
+$editor=nano
 
 
 #################
